--- a/mypy.ini
+++ b/mypy.ini
@@ -7,3 +7,15 @@ namespace_packages = True
 
 [mypy-pygraphviz]
 ignore_missing_imports = True
+
+[mypy-rectpack]
+ignore_missing_imports = True
+
+[mypy-tqdm]
+ignore_missing_imports = True
+
+[mypy-yaspin]
+ignore_missing_imports = True
+
+[mypy-PIL]
+ignore_missing_imports = True
