--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ before_install:
 install:
   - pip install .
   - pip install -r requirements-dev.txt
+  - pip install coveralls
 script:
-  - python -m pytest
+  - python -m pytest --cov=dot2bgraph
+after_success:
+  - coveralls
