--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,7 @@ install:
   - pip install coveralls
 script:
   - python -m pytest --cov=dot2bgraph
+  - command -v dot2bgraph
+  - dot2bgraph -h
 after_success:
   - coveralls
