--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - "3.5"
-  - "3.6"
   - "3.7"
   - "3.8"
   - "3.9"
+  - "3.10"
 before_install:
   - sudo apt-get update
   - sudo apt-get install graphviz graphviz-dev
@@ -14,6 +13,7 @@ install:
   - pip install coveralls
 script:
   - python -m pytest --cov=dot2bgraph
+  - python -m mypy -p dot2bgraph --config-file=mypy.ini
   - command -v dot2bgraph
   - dot2bgraph -h
 after_success:
